--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -1001,18 +1001,18 @@ function getAccounts(){
 }
 
 function make_trade(add1x, add2x, tokenID){
-localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
-	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
-	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
-	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
-	localStorage.setItem("mySharedData", document.getElementById("password").value);
+//localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
+	//localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
+	//localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
+	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
+	//localStorage.setItem("mySharedData", document.getElementById("password").value);
 	
-	var nft_k = localStorage.getItem("NFT Contract");
+	//var nft_k = localStorage.getItem("NFT Contract");
 	//var nft_id = localStorage.getItem("NFT Token ID");
-	var loan_amt = localStorage.getItem("Loan Amount");
-	var loan_term = localStorage.getItem("Loan Term");
-	var add1x = localStorage.getItem("mySharedData");
-account_address.push(add1x)
+	//var loan_amt = localStorage.getItem("Loan Amount");
+	//var loan_term = localStorage.getItem("Loan Term");
+	//var add1x = localStorage.getItem("mySharedData");
+//account_address.push(add1x)
 console.log(account_address[0])
 var acct = (async function(){
   	
@@ -1025,13 +1025,13 @@ var acct = (async function(){
 	
 	
 	
-	console.log(nft_k);
-	console.log(nft_id);
-	console.log(loan_amt);
-	console.log(loan_term);
+	//console.log(nft_k);
+	//console.log(nft_id);
+	//console.log(loan_amt);
+	//console.log(loan_term);
  	const contract = web3.utils.toChecksumAddress(nft_k);
 	
-        var _data = new web3.eth.Contract(abi, contract_address).methods.createLoanRequest(nft, address, nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.accept_trade(nft, address, nft_id).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
