--- a/create_nft_swap_form.html
+++ b/create_nft_swap_form.html
@@ -1160,7 +1160,7 @@ function image_and_name(){
   const json = await contract_bal.methods.tokenURI(nft_id).call();
   //alert(bal);
   //var result = await getvalue()
-  console.log('Woo done!', result)
+  console.log('Woo done!', json)
  
 	
 
