--- a/create_nft_swap_form.html
+++ b/create_nft_swap_form.html
@@ -1157,17 +1157,18 @@ function image_and_name(){
   const contract_address = await web3.utils.toChecksumAddress(nft_k)
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
-  const json = await contract_bal.methods.tokenURI(nft_id).call();
+  const lnk = await contract_bal.methods.tokenURI(nft_id).call();
   //alert(bal);
   //var result = await getvalue()
   //console.log('Woo done!', json)
-	$.ajax({
-                url: json,
-                cache: false,
-                success: function(html){
-                var result = html
-		console.log(result);
-		}
+	var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+            console.log(this.responseText);
+       }
+    };
+    xhttp.open("GET", lnk, true);
+    xhttp.send();
 	
 
 })()
