--- a/create_nft_swap_form.html
+++ b/create_nft_swap_form.html
@@ -1164,7 +1164,9 @@ function image_and_name(){
 	var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
-            console.log(this.responseText);
+            result = this.response;
+			JSONresult = JSON.parse(result);
+			console.log(JSONresult.image)
        }
     };
     xhttp.open("GET", lnk, true);
