--- a/create_nft_swap_form.html
+++ b/create_nft_swap_form.html
@@ -1165,8 +1165,10 @@ function image_and_name(){
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
             result = this.response;
+			console.log(result)
 			JSONresult = JSON.parse(result);
-			console.log(JSONresult.image)
+			console.log(JSONresult.image);
+			result = JSONresult.image
        }
     };
     xhttp.open("GET", lnk, true);
