--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -1404,7 +1404,7 @@ var val = (async function(){
     };
     xhttp.open("GET", lnk, true);
     xhttp.send();	
-
+	return result
 })()
 //return val
 	}
