--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -1151,7 +1151,7 @@ return result1
 	}
 	
 	
-function get_image(k,n)
+function get_image(k,n){
 var image = (async function(){
 
 var img = await image_and_name(k,n)
