--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -889,7 +889,7 @@ var display = (async function(){
 	newDiv.id = 'rs'+i;
 	chat.appendChild(newDiv);
 	
-	document.getElementById("rs" + i).src =  + image;
+	document.getElementById("rs" + i).src =  image;
 	
 	
 	
