--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -1125,11 +1125,11 @@ function image_and_name(k,n){
 	var nft_k = k 
 	//var nft_id = localStorage.getItem("NFT Token ID");
 	var nft_id = n
-  //var val = (async function(){
+  var val = (async function(){
   const contract_address = web3.utils.toChecksumAddress(nft_k)
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
-  const contract_bal = new web3.eth.Contract(abi, contract_address);
-  const lnk = contract_bal.methods.tokenURI(nft_id).call();
+  const contract_bal = await new web3.eth.Contract(abi, contract_address);
+  const lnk = await contract_bal.methods.tokenURI(nft_id).call();
   //alert(bal);
   //var result = await getvalue()
   //console.log('Woo done!', json)
@@ -1140,13 +1140,14 @@ function image_and_name(k,n){
 			JSONresult = JSON.parse(result);
 			console.log(JSONresult.image);
 			var result1 = JSONresult.image
+			return result1
        }
     };
     xhttp.open("GET", lnk, true);
     xhttp.send();
 	
-return result1
-//})()
+
+})()
 //return val
 	}
 	
