--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -884,7 +884,7 @@ var display = (async function(){
 	
 	
 	
-	const image = get_image(contract_ID1, tokenID);
+	const image = image_and_name(contract_ID1, tokenID);
 	var newDiv = document.createElement('img');
 	newDiv.id = 'rs'+i;
 	chat.appendChild(newDiv);
