--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -890,7 +890,7 @@ var display = (async function(){
 	newDiv.id = 'rs'+i;
 	chat.appendChild(newDiv);
 	function getImage(xhttp){
-			var result = xttp.response;
+			var result = xhttp.response;
 			JSONresult = JSON.parse(result);
 			console.log(JSONresult.image);
 			//var result1 = JSONresult.image
