--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -888,6 +888,7 @@ var display = (async function(){
 	console.log(image);
 	var newDiv = document.createElement('img');
 	newDiv.id = 'rs'+i;
+	newDiv.style.width='10%';
 	chat.appendChild(newDiv);
 	function getImage(xhttp){
 			var result = xhttp.response;
