--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -888,7 +888,8 @@ var display = (async function(){
 	console.log(image);
 	var newDiv = document.createElement('img');
 	newDiv.id = 'rs'+i;
-	newDiv.style.width='10%';
+	newDiv.setAttribute('width', '50%');
+	newDiv.setAttribute('height', '50%');
 	chat.appendChild(newDiv);
 	function getImage(xhttp){
 			var result = xhttp.response;
