--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -897,8 +897,8 @@ var display = (async function(){
 			//var result1 = JSONresult.image
 			//return result1
 	document.getElementById("rs" + i).src =  JSONresult.image;
-	document.getElementById("rs" + i).setAttribute('width', '25%');
-	document.getElementById("rs" + i).setAttribute('height', '25%');
+	//document.getElementById("rs" + i).setAttribute('width', '25%');
+	//document.getElementById("rs" + i).setAttribute('height', '25%');
 	}
 	
 	
