--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -1180,7 +1180,7 @@ function image_and_name(k,n, getImage){
 			//return result1
        }
     };
-    xhttp.open("GET", lnk, false);
+    xhttp.open("GET", lnk, true);
     xhttp.send();
 	
 
