--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -885,7 +885,7 @@ var display = (async function(){
 	
 	
 	//const image = image_and_name(contract_ID1, tokenID, getImage);
-	console.log(image);
+	//console.log(image);
 	var newDiv = document.createElement('img');
 	newDiv.id = 'rs'+i;
 	newDiv.onload(image_and_name(contract_ID1, tokenID, getImage))
