--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -951,7 +951,7 @@ var display = (async function(){
 	
 	
 	const image1 = image_and_name(contract_ID2, tokenID2, getImage);
-	console.log(image);
+	//console.log(image);
 	var newDiv = document.createElement('img');
 	newDiv.id = 'vs'+i;
 	
