--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -898,6 +898,7 @@ var display = (async function(){
 			//var result1 = JSONresult.image
 			//return result1
 	
+	document.getElementById("rs" + i) = new image();
 	document.getElementById("rs" + i).src = JSONresult.image;
 	document.getElementById("rs" + i).setAttribute('width', '15%');
 	document.getElementById("rs" + i).setAttribute('height', '15%');
