--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -884,11 +884,12 @@ var display = (async function(){
 	
 	
 	
-	//const image = image_and_name(contract_ID1, tokenID, getImage);
+	//const image = await image_and_name(contract_ID1, tokenID, getImage);
 	//console.log(image);
 	var newDiv = document.createElement('img');
 	newDiv.id = 'rs'+i;
-	newDiv.onload = "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))"
+	newDiv.loading = "lazy";
+	newDiv.onload = await "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))"
 	//newDiv.addEventListener("load", "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))");
 	chat.appendChild(newDiv);
 	function getImage(xhttp){
@@ -898,7 +899,7 @@ var display = (async function(){
 			//var result1 = JSONresult.image
 			//return result1
 	
-	document.getElementById("rs" + i) = new image();
+	//document.getElementById("rs" + i).loading = "lazy";
 	document.getElementById("rs" + i).src = JSONresult.image;
 	document.getElementById("rs" + i).setAttribute('width', '15%');
 	document.getElementById("rs" + i).setAttribute('height', '15%');
