--- a/create_nft_swap_form.html
+++ b/create_nft_swap_form.html
@@ -1169,6 +1169,13 @@ function image_and_name(){
 			JSONresult = JSON.parse(result);
 			console.log(JSONresult.image);
 			result = JSONresult.image
+			
+			//var image = document.images[0];
+			var downloadingImage = new Image();
+			downloadingImage.onload = function(){
+				image.src = this.src;   
+};
+downloadingImage.src = result;
        }
     };
     xhttp.open("GET", lnk, true);
