--- a/create_nft_swap_form.html
+++ b/create_nft_swap_form.html
@@ -1170,7 +1170,7 @@ function image_and_name(){
 			console.log(JSONresult.image);
 			result = JSONresult.image
 			
-			//var image = document.images[0];
+			var image = document.createElement('img');
 			var downloadingImage = new Image();
 			downloadingImage.onload = function(){
 				image.src = this.src;   
