--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -903,9 +903,10 @@ var display = (async function(){
 	
 			var img = new Image();
             img.src = JSONresult.image
+			img.setAttribute('width', '15%');
+			img.setAttribute('height', '15%');
             chat.appendChild(img);
-			chat.setAttribute('width', '15%');
-			chat.setAttribute('height', '15%');
+			
 	//document.getElementById("rs" + i).loading = "lazy";
 	//document.getElementById("rs" + i).src = JSONresult.image;
 	//document.getElementById("rs" + i).setAttribute('width', '15%');
