--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -888,8 +888,8 @@ var display = (async function(){
 	//console.log(image);
 	var newDiv = document.createElement('img');
 	newDiv.id = 'rs'+i;
-	newDiv.setAttribute('width', '15%');
-	newDiv.setAttribute('height', '15%');
+	//newDiv.setAttribute('width', '15%');
+	//newDiv.setAttribute('height', '15%');
 	//newDiv.loading = "lazy";
 	//newDiv.onload = await "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))"
 	//newDiv.addEventListener("load", "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))");
