--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -903,6 +903,8 @@ var display = (async function(){
 	
 			var img = new Image();
             img.src = JSONresult.image
+			img.width = '15%'
+			img.height = '15%'
 			img.setAttribute('width', '15%');
 			img.setAttribute('height', '15%');
             chat.appendChild(img);
