--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -73,6 +73,14 @@ display: none;
   border: 1px solid #aaaaaa;
 }
 
+#img {
+
+width: 350px;
+height: 350px;
+
+
+}
+
 
 </style>
 </head>
@@ -977,8 +985,8 @@ var display = (async function(){
 			var img = new Image();
             img.src = JSONresult.image
             chat.appendChild(img);
-			chat.setAttribute('width', '15%');
-			chat.setAttribute('height', '15%');
+			//chat.setAttribute('width', '15%');
+			//chat.setAttribute('height', '15%');
 	//document.getElementById("vs" + i).src = JSONresult.image;
 	//document.getElementById("vs" + i).setAttribute('width', '15%');
 	//document.getElementById("vs" + i).setAttribute('height', '15%');
